--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div class="container">
             <button id="prev"><<</button>
-            <h1 class="month" data-this-date="2018-01-01"></h1>
+            <h1 class="month" data-this-date=""></h1>
             <button id="next">>></button>
             <ul class="month-list"></ul>
         </div>
